updates swagger documentation
