# api/dtos/user.go
@@ -1,6 +1,6 @@
 package dtos
 
 type NewTestUserDto struct {
-	FirstName string `json:"text" binding:"required"`
-	LastName  string `json:"anonymous"  binding:"required"`
+	FirstName string `json:"firstname" binding:"required"`
+	LastName  string `json:"lastname"  binding:"required"`
 }
